--- a/templates/create_email.html
+++ b/templates/create_email.html
@@ -36,17 +36,17 @@
 
   <div class="form-group">
     
-    <input type="text" class="form-control" name="subject" placeholder="Subject...">
+    <input type="text" class="form-control" name="email-subject" placeholder="Subject...">
   </div>
 
   <div class="form-group">
 
-    <textarea class="form-control"  name="description" placeholder="Body.."></textarea>
+    <textarea class="form-control"  name="email-body" placeholder="Body.."></textarea>
   </div>
 
     <div class="form-group">
     
-    <textarea class="form-control" name="requirement" placeholder="Receiver's email"></textarea>
+    <textarea class="form-control" name="email-receiver" placeholder="Receiver's email"></textarea>
   </div>
 
 
