update: parsing data via template

--- a/templates/email.html
+++ b/templates/email.html
@@ -20,9 +20,9 @@
                                 <td class=""
                                     style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 16px; vertical-align: top; color: #fff; font-weight: 500; text-align: center; border-radius: 3px 3px 0 0; background-color: #57a6f5; margin: 0; padding: 20px;"
                                     align="center" bgcolor="#71b6f9" valign="top">
-                                    <p style="font-size:32px;color:#fff;">Nifulie</p> <br>
-                                    <span style="margin-top: 10px;display: block; color: #fff;">Hello our, Good
-                                        customer!</span>
+                                    <p style="font-size:32px;color:#fff;">Udicti</p> <br>
+                                    <span style="margin-top: 10px;display: block; color: #fff;">Dear, Udicti Member
+                                        </span>
                                 </td>
                             </tr>
                             <tr
