fix: template email issue

--- a/templates/email.html
+++ b/templates/email.html
@@ -20,9 +20,9 @@
                                 <td class=""
                                     style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 16px; vertical-align: top; color: #fff; font-weight: 500; text-align: center; border-radius: 3px 3px 0 0; background-color: #57a6f5; margin: 0; padding: 20px;"
                                     align="center" bgcolor="#71b6f9" valign="top">
-                                    <p style="font-size:32px;color:#fff;">Udicti</p> <br>
-                                    <span style="margin-top: 10px;display: block; color: #fff;">Dear, Udicti Member
-                                        </span>
+                                    <p style="font-size:32px;color:#fff;">Nifulie</p> <br>
+                                    <span style="margin-top: 10px;display: block; color: #fff;">Hello our, Good
+                                        customer!</span>
                                 </td>
                             </tr>
                             <tr
@@ -57,7 +57,7 @@
                                                 <td class="content-block"
                                                     style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;"
                                                     valign="top">
-                                                    <a href="https://udictihub.tk/" class="btn-primary"
+                                                    <a href="https://nifulie.com/" class="btn-primary"
                                                         style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; color: #FFF; text-decoration: none; line-height: 2em; font-weight: bold; text-align: center; cursor: pointer; display: inline-block; border-radius: 5px; text-transform: capitalize; background-color: #57a6f5; margin: 0; border-color: #57a6f5; border-style: solid; border-width: 8px 16px;">Back
                                                         to Site
                                                     </a>
@@ -69,7 +69,7 @@
                                                 <td class="content-block"
                                                     style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;"
                                                     valign="top">
-                                                    Welcome All.. <b>udictihub.tk</b>
+                                                    Thanks for choosing <b>Nifulie.com</b>
                                                     <br> Admin. </br>
                                                 </td>
                                             </tr>
