--- a/templates/email.html
+++ b/templates/email.html
@@ -7,7 +7,7 @@
             <td style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0;"
                 valign="top"></td>
             <td class="container" width="600"
-                style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; display: block !important; max-width: 600px !important; clear: both !important; margin: 0 auto;"
+                style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-ali: top; display: block !important; max-width: 600px !important; clear: both !important; margin: 0 auto;"
                 valign="top">
                 <div class="content"
                     style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; max-width: 600px; display: block; margin: 0 auto; padding: 20px;">
@@ -57,10 +57,7 @@
                                                 <td class="content-block"
                                                     style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;"
                                                     valign="top">
-                                                    <a href="https://udictihub.tk/" class="btn-primary"
-                                                        style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; color: #FFF; text-decoration: none; line-height: 2em; font-weight: bold; text-align: center; cursor: pointer; display: inline-block; border-radius: 5px; text-transform: capitalize; background-color: #57a6f5; margin: 0; border-color: #57a6f5; border-style: solid; border-width: 8px 16px;">Back
-                                                        to Site
-                                                    </a>
+                                           
 
                                                 </td>
                                             </tr>
